# langchain-academy

./: .envrc  pyproject.toml
module-0/: basics.ipynb
module-1/: 1_simple-graph.ipynb  2_chain.ipynb
module-1/studio/: agent.py  pyproject.toml
module-1/studio/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
module-2/studio/: pyproject.toml
