[project]
name = "langchain-academy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph",
    "langgraph-prebuilt",
    "langgraph-sdk",
    "langgraph-checkpoint-sqlite",
    "langsmith>=0.7.31",
    "langchain-community",
    "langchain-core>=1.2.28",
    "langchain-openai>=1.1.14",
    "langchain-text-splitters>=1.1.2",
    "notebook",
    "langchain-tavily",
    "wikipedia",
    "trustcall",
    "langgraph-cli[inmem]",
    "aiohttp>=3.13.4",
    "Pygments>=2.20.0",
    "cryptography>=46.0.7",
    "ruff>=0.15.16",
]


[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]   # pycodestyle, pyflakes, isort, pyupgrade
ignore = ["E501"]                  # ignore line length (if handled elsewhere)

[tool.ruff.format]
quote-style = "double"
indent-style = "space"