[project]
name = "langchain-academy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph",
    "langgraph-prebuilt",
    "langgraph-sdk",
    "langgraph-checkpoint-sqlite",
    "langsmith>=0.7.31",
    "langchain-community",
    "langchain-core>=1.2.28",
    "langchain-openai>=1.1.14",
    "langchain-text-splitters>=1.1.2",
    "notebook",
    "langchain-tavily",
    "wikipedia",
    "trustcall",
    "langgraph-cli[inmem]",
    "aiohttp>=3.13.4",
    "Pygments>=2.20.0",
    "cryptography>=46.0.7",
    "langchain-google-genai>=4.2.4",
]
